crates/runtime/tests/acceleration/snapshots/integration__acceleration__partition_by_cayenne__null_partition_name_is_null_filter.snap
---
source: crates/runtime/tests/acceleration/partition_by_cayenne.rs
expression: sanitized_plan
---
FilterExec: name@1 IS NULL
  SchemaCastScanExec
    PartitionedUnionExec
      CayenneAccelerationExec: snapshots_scanned=0, files_scanned=0
        BytesProcessedExec
          EmptyExec
      CayenneAccelerationExec: snapshots_scanned=0, files_scanned=0
        BytesProcessedExec
          EmptyExec
      CayenneAccelerationExec: snapshots_scanned=0, files_scanned=0
        BytesProcessedExec
          EmptyExec
      CayenneAccelerationExec: snapshots_scanned=1, files_scanned=1
        BytesProcessedExec
          DataSourceExec: file_groups={1 group: [[<TEMP_PATH>/.vortex]]}, projection=[id, name, age, city, score], file_type=vortex, predicate: name@1 IS NULL
