crates/runtime/tests/acceleration/snapshots/integration__acceleration__partition_by_cayenne__numeric_null_partition_score_is_null_filter.snap
---
source: crates/runtime/tests/acceleration/partition_by_cayenne.rs
expression: sanitized_plan
---
SchemaCastScanExec
  PartitionedUnionExec
    CayenneAccelerationExec: snapshots_scanned=1, files_scanned=1
      BytesProcessedExec
        DataSourceExec: file_groups={1 group: [[<TEMP_PATH>/.vortex]]}, projection=[id, name, age, city, score], file_type=vortex, predicate: score@4 IS NULL
    CayenneAccelerationExec: snapshots_scanned=1, files_scanned=1
      BytesProcessedExec
        DataSourceExec: file_groups={1 group: [[<TEMP_PATH>/.vortex]]}, projection=[id, name, age, city, score], file_type=vortex, predicate: score@4 IS NULL
    CayenneAccelerationExec: snapshots_scanned=1, files_scanned=1
      BytesProcessedExec
        DataSourceExec: file_groups={1 group: [[<TEMP_PATH>/.vortex]]}, projection=[id, name, age, city, score], file_type=vortex, predicate: score@4 IS NULL
    CayenneAccelerationExec: snapshots_scanned=1, files_scanned=1
      BytesProcessedExec
        DataSourceExec: file_groups={1 group: [[<TEMP_PATH>/.vortex]]}, projection=[id, name, age, city, score], file_type=vortex, predicate: score@4 IS NULL
    CayenneAccelerationExec: snapshots_scanned=1, files_scanned=1
      BytesProcessedExec
        DataSourceExec: file_groups={1 group: [[<TEMP_PATH>/.vortex]]}, projection=[id, name, age, city, score], file_type=vortex, predicate: score@4 IS NULL
