crates/runtime/tests/acceleration/snapshots/integration__acceleration__partition_by_cayenne__refresh_sql_with_bucket_function.snap
---
source: crates/runtime/tests/acceleration/partition_by_cayenne.rs
expression: formatted
---
+----+--------------+-----+--------------+-------+
| id | name         | age | city         | score |
+----+--------------+-----+--------------+-------+
| 1  | John Doe     | 28  | New York     | 85    |
| 3  | Mike Johnson | 45  | Chicago      | 78    |
| 4  | Emily Brown  | 31  | Houston      | 89    |
| 5  | David Lee    | 39  | Phoenix      | 76    |
| 6  | Sarah Wilson | 26  | Philadelphia | 94    |
| 7  | Tom Anderson | 52  | San Antonio  | 81    |
| 9  | Chris Martin | 37  | Dallas       | 79    |
+----+--------------+-----+--------------+-------+
